--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^8.2.0",
     "mongodb": "^2.2.26",
     "ng-http-loader": "^0.9.0",
+    "path": "^0.12.7",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
