--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_CONN=mongodb://admin:admin@ds119268.mlab.com:19268/admingp
-JWT_SECRET=mysecretkeygboard
+DB_CONN=<dbconnectionUrl>
+JWT_SECRET=<secretkey>
